<resources>
    <string name="app_name">Wishmaster</string>

    <string name="adult_boards">Взрослым</string>
    <string name="games_boards">Игры</string>
    <string name="politics_boards">Политика</string>
    <string name="users_boards">Пользовательские</string>
    <string name="different_boards">Разное</string>
    <string name="creativity_boards">Творчество</string>
    <string name="subject_boards">Тематика</string>
    <string name="tech_boards">Техника и софт</string>
    <string name="japanese_boards">Японская культура</string>

    <string name="action_refresh_boards">Обновить список борд</string>
    <string name="action_refresh">Обновить</string>

    <string name="loading_text">Загрузка…</string>
    <string name="more_boards_text">Нужно больше любимых борд!</string>
    <string name="there_is_nothing_text">Здесь ничего нет.\nВпрочем, как и смысла в твоей жизни.</string>
    <string name="action_add_board">Добавить борду</string>
    <string name="loading_boards_text">Загрузка борд… \nЭто может занять несколько секунд.</string>

    <string name="no_new_posts">Новых постов нет</string>
    <string name="unknown">ноунейм.хз</string>
    <string name="action_copy_link">Копировать ссылку"</string>
    <string name="new_post_text">Новый пост</string>

    <string name="email_text">Email</string>
    <string name="comment_text">Комментарий</string>
    <string name="sage_text">Сажи</string>
    <string name="op_of_the_thread_text">Оп треда</string>
    <string name="captcha_answer">Ответ из капчи</string>
    <string name="send_post_text">Отправить</string>

    <string-array name="on_board_clicked_choice_remove">
        <item name="action_open_board">Открыть</item>
        <item name="action_copy_link">@string/action_copy_link</item>
        <item name="action_remove_from_favourites">Убрать из избранного</item>
    </string-array>
    <string-array name="on_board_clicked_choice_add">
        <item name="action_open_board">Открыть</item>
        <item name="action_copy_link">@string/action_copy_link</item>
        <item name="action_add_to_favourites">Добавить в избранное</item>
    </string-array>

    <string-array name="on_thread_item_clicked">
        <item name="action_open_full">Открыть пост полностью</item>
        <item name="action_copy_link">@string/action_copy_link</item>
    </string-array>

    <string-array name="on_post_item_clicked">
        <item name="action_answer">Ответить</item>
        <item name="action_copy_link">@string/action_copy_link</item>
    </string-array>


    <string name="settings_text">Настройки</string>
    <string name="header_dashboard_text">Начальная страница</string>

    <string name="pref_dashboard_tab_position_key">choose_tab_position</string>
    <string name="pref_dashboard_tab_position_favourites">0</string>
    <string name="pref_dashboard_tab_position_board_list_default">1</string>
    <string name="pref_dashboard_tab_position_history">2</string>
    <string name="settings_dashboard_tab_position_text">Выбрать главную вкладку</string>
    <string name="pref_choose_tab_position_favourites">Избранные борды</string>
    <string name="pref_choose_tab_position_list">Список всех борд</string>
    <string name="pref_choose_tab_position_history">История посещенных тредов</string>
    <string-array name="settings_dashboard_tab_position_entries">
        <item name="pref_choose_tab_position_favourites_entry">@string/pref_choose_tab_position_favourites</item>
        <item name="pref_choose_tab_position_list_entry">@string/pref_choose_tab_position_list</item>
        <item name="pref_choose_tab_position_history_entry">@string/pref_choose_tab_position_history</item>
    </string-array>
    <string-array name="settings_dashboard_tab_position_entry_values">
        <item>@string/pref_dashboard_tab_position_favourites</item>
        <item>@string/pref_dashboard_tab_position_board_list_default</item>
        <item>@string/pref_dashboard_tab_position_history</item>
    </string-array>
    <string name="negative_button_text">Отмена</string>
    <string name="positive_button_text">Применить</string>

    <string name="pref_images_height_key">image_height_key</string>
    <string name="pref_images_height_default">150</string>

    <string name="header_interface_text">Интерфейс</string>
    <string name="pref_category_other">Другое</string>
    
    <string name="pref_loading_view_key">loading_view_key</string>
    <string name="pref_loading_yoba_default">0</string>
    <string name="pref_loading_spinner">1</string>
    <string name="pref_loading_android_progress_bar">2</string>
    <string name="settings_interface_loading_view_text">Анимация загрузки</string>
    <string name="pref_choose_loading_view_yoba">Йоба</string>
    <string name="pref_choose_loading_view_spinner">Спиннер</string>
    <string name="pref_choose_loading_view_android_progress_bar">Ведроид прогресс бар материальный</string>
    <string-array name="settings_interface_loading_view_entries">
        <item name="pref_choose_loading_view_yoba_entry">@string/pref_choose_loading_view_yoba</item>
        <item name="pref_choose_loading_view_spinner_entry">@string/pref_choose_loading_view_spinner</item>
        <item name="pref_choose_loading_view_android_pregress_bar_entry">@string/pref_choose_loading_view_android_progress_bar</item>
    </string-array>
    <string-array name="settings_interface_loading_view_entry_values">
        <item>@string/pref_loading_yoba_default</item>
        <item>@string/pref_loading_spinner</item>
        <item>@string/pref_loading_android_progress_bar</item>
    </string-array>

    <string name="pref_category_text">Текст</string>

    <string name="settings_interface_lines_count_text">Ограничить количество строк в списке тредов</string>
    <string name="pref_lines_count_key">lines_count_key</string>
    <string name="pref_lines_count_default">6</string>
    <string name="pref_lines_count_max">20</string>
    <string name="pref_lines_count_hint">0 - неограничено</string>
    <string name="pref_lines_count_indefinite">Неограничено</string>

    <string name="pref_category_images">Изображения</string>
    <string name="settings_interface_image_height_text">Высота превью-картинки</string>

    <string name="pref_image_height_key">image_height_key</string>
    <string name="pref_image_height_min_key">image_height_min_key</string>
    <string name="pref_image_height_min_default">20</string>
    <string name="pref_image_height_min_limit_min">0</string>
    <string name="pref_image_height_min_limit_max">100</string>
    <string name="pref_image_height_max_key">image_height_max_key</string>
    <string name="pref_image_height_max_default">150</string>
    <string name="pref_image_height_max_limit_min">100</string>
    <string name="pref_image_height_max_limit_max">300</string>
    <string name="pref_image_height_min_height_hint">Минимальная высота в dp</string>
    <string name="pref_image_height_max_height_hint">Максимальная высота в dp</string>
    <string name="pref_image_height_min_height_text">Минимальная — </string>
    <string name="pref_image_height_max_height_text">максимальная — </string>


</resources>

