<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fitsSystemWindows="true">

        <FrameLayout
            android:id="@+id/toolbar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </FrameLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/app_bar_layout">


        <RelativeLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="false"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_text"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>


            <CheckBox
                android:id="@+id/sage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email_input_layout"
                android:text="@string/sage_text"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/comment_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/sage"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/comment_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/comment_text"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="textMultiLine"
                    android:lines="8"
                    android:scrollbars="vertical"
                    />

            </android.support.design.widget.TextInputLayout>

            <FrameLayout
                android:id="@+id/files_attached_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/comment_input_layout">

            </FrameLayout>

            <FrameLayout
                android:id="@+id/captcha_image_container"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_below="@+id/files_attached_container"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    app:srcCompat="@drawable/tlen"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/answer_and_post_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/captcha_image_container"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/answer_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="false"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/answer_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/captcha_answer"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="number"
                        android:singleLine="false"/>

                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:id="@+id/send_post_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="false"
                        android:layout_below="@+id/answer_input_layout"
                        android:layout_gravity="center"
                        android:text="@string/send_post_text"/>
                </FrameLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/is_op"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_input_layout"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/sage"
                android:layout_toRightOf="@+id/sage"
                android:checked="false"
                android:enabled="false"
                android:text="@string/op_of_the_thread_text"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>