<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <SeekBar
            android:id="@+id/min_height_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/min_height_hint"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/min_height_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/min_height_seekbar"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/pref_lines_count_max" />

        <TextView
            android:id="@+id/min_height_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/pref_image_height_min_height_hint" />

        <TextView
            android:id="@+id/min_height_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/min_height_seekbar"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:text="0" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:layout_marginBottom="16dp">

        <SeekBar
            android:id="@+id/max_height_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/max_height_hint"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/max_height_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/max_height_seekbar"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/pref_lines_count_max" />

        <TextView
            android:id="@+id/max_height_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/pref_image_height_max_height_hint" />

        <TextView
            android:id="@+id/max_height_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/max_height_seekbar"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:text="0" />
    </RelativeLayout>


    <!--<TextView-->
        <!--android:id="@+id/max_height_hint"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/min_height_seekbar"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:text="@string/pref_image_height_max_height_hint" />-->

    <!--<TextView-->
        <!--android:id="@+id/max_height_current"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@+id/max_height_hint"-->
        <!--android:layout_marginLeft="16dp"-->
        <!--android:layout_marginStart="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_toLeftOf="@+id/max_height_seekbar"-->
        <!--android:text="0" />-->

    <!--<TextView-->
        <!--android:id="@+id/max_height_max"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/pref_lines_count_max"-->
        <!--android:layout_alignTop="@+id/max_height_seekbar"-->
        <!--android:layout_alignLeft="@+id/min_height_max"-->
        <!--android:layout_alignStart="@+id/min_height_max" />-->

    <!--<SeekBar-->
        <!--android:id="@+id/max_height_seekbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignLeft="@+id/min_height_seekbar"-->
        <!--android:layout_below="@+id/max_height_hint"-->
        <!--android:layout_marginBottom="16dp"-->
        <!--android:layout_marginTop="16dp"-->
        <!--android:layout_toLeftOf="@+id/min_height_max"-->
        <!--android:layout_toStartOf="@+id/min_height_max" />-->


</RelativeLayout>